feat: Versão de lançamento